Fix T47691: Missing redraw w/ pop-up dialogs

Search buttons would overwrite existing callbacks, even when they weren't needed.
Causing missing updates for search buttons in pop-ups.